# SoftRenderer

./: CMakeLists.txt  README.md  main.cpp
Custom/: Mesh.h  Model.h
Math/: Mathf.cpp  Mathf.h
Render/: Buffer.h  Fragment.h  Render.cpp  Render.h  Texture.h  Type.h  VertexArray.h
Render/Shader/: FragmentShader.h  Shader.cpp  Shader.h  ShaderProgram.h  ShaderTest.h  VertexShader.h
Window/Win/: Window.cpp  Window.h
